small edits overleaf

--- a/main.tex
+++ b/main.tex
@@ -130,16 +130,17 @@ These objectives raise the following research questions:
 
 \subsection{Research questions}
 \begin{itemize}
-    \item How can the temperature dependence of Lamb waves be utilised for temperature monitoring of NGVs?
-    \item What is the effect of the physical environment on Lamb wave propagation?
+    \item How can the temperature dependence of Lamb waves be utilised for the temperature monitoring of NGVs?
+    \item How can the theoretical temperature sensitivity of individual Lamb wave modes be verified experimentally?
+    \item What is the effect of the physical environment on Lamb wave propagation in NGVs?
 \begin{itemize}
     \item High temperatures
     \item Cooling holes
     \item Curved surfaces
 \end{itemize}
-    \item What is the most suitable transducer configuration for attaching to nozzle guide vanes?
-    \item To what extent can acoustic reflections from cooling holes be used to monitor temperature at a number of locations across the structure of an NGV? 
-    \item How can the theoretical temperature sensitivity of individual Lamb wave modes be verified experimentally?
+    \item Which of the Lamb wave modes (or group of modes) is most appropriate for temperature monitoring of NGVs?
+    \item To what extent can acoustic reflections from cooling holes be used to monitor temperature at a number of locations across the structure of an NGV?
+    \item What is the most suitable transducer configuration for exciting Lamb waves in NGVs?
 \end{itemize}
 \newpage
 
@@ -332,7 +333,7 @@ Ultrasound is of particular interest for SHM applications as it allows for small
 
 When using acoustic waves for SHM and NDE applications either a standalone sensor can be placed in an area of interest, or the structure of interest can directly be used as the sensing medium. In the context of high temperature turbomachinery it would be advantageous to avoid placing sensors into the gas path as they are difficult to interrogate and have the potential to affect operation of the engine components. The structure of turbine blades and NGVs can be used as the sensing medium assuming that an appropriate system of transducers can be implemented.
 
-When considering using a structure as a sensing medium its geometry has an impact on wave propagation. The geometry of a typical turbine blade or NGV is that of a thin plate like structure through which ultrasonic guided waves will propagate. Rayleigh waves (otherwise known as ``Surface Acoustic Waves'' (SAWs)) can be excited at high frequencies (at wavelengths much smaller than material thickness) and are confined to the surface of a material, while Lamb waves (otherwise known as ``Guided Waves'') will propagate if excited at frequencies with wavelengths in the order of material thickness, as they interact with both the top and bottom boundaries of a material. Although Rayleigh waves are non-dispersive they produce large surface motions that are highly sensitive to any discontinuities or defects and are highly affected by surface coatings such as TBCs~\cite{Dransfeld1970}. Lamb waves will propagate through the multi-layered structure of substrate-bonding layer-TBC, where the through-thickness temperature gradient will affect wave propagation, rather than only the temperature at the surface of the TBC.  
+When considering using a structure as a sensing medium its geometry has an impact on wave propagation. The geometry of a typical turbine blade or NGV is that of a thin plate like structure through which ultrasonic guided waves will propagate. Rayleigh waves (otherwise known as ``Surface Acoustic Waves'' (SAWs)) can be excited at high frequencies (at wavelengths much smaller than material thickness) and are confined to the surface of a material, while Lamb waves (otherwise known as ``Guided Waves'') will propagate if excited at frequencies with wavelengths in the order of material thickness, as they interact with both the top and bottom boundaries of a material. Although Rayleigh waves are non-dispersive they produce large surface motions that are highly sensitive to any discontinuities or defects and are highly affected by surface coatings such as TBCs~\cite{Dransfeld1970}. Lamb waves will propagate through the multi-layered structure of substrate-bonding layer-TBC, where the through-thickness temperature gradient will affect wave propagation, rather than only the temperature at the surface of the TBC. The interaction between both boundaries of a material means that Lamb waves can be excited from the internal surface of an NGV, outside of the gas path. This reduces the influence of the sensor on turbine operation, and reduces the effect of temperature on sensor operation.
 
 \subsubsection{Temperature Compensation Techniques} 
 In many applications of Lamb wave SHM/NDE the effect of temperature on wave propagation is an undesirable factor that is compensated for using various signal processing techniques. These methods attempt to eliminate the influence of temperature in order to isolate the variable of interest i.e. defects. Temperature compensation or calibration can be carried out by using thermocouples~\cite{2-gajdacsi2014reconstruction}, but this is not ideal for the cases where the external use of a sensor is prohibited. Temperature compensation techniques, such as baseline signal stretch (BSS)~\cite{9R-12-croxford2007strategies, 1R-22-harley2012scale}, optimal baseline selection (OBS)~\cite{1R-24-konstantinidis2006temperature}, hybrid combination of BSS and OBS~\cite{1R-26-clarke2010guided, 1R-27-croxford2010efficient}, combination of OBS and adaptive filter algorithm~\cite{1R-28-wang2014adaptive}, Time of flight ($t_F$) calibration based on a linear relationship between $t_F$ and temperature~\cite{1R-li2018new}, Hilbert transform and the orthogonal matching pursuit algorithm~\cite{1R-20-liu2016baseline}, and temperature compensation for both velocity and phase changes~\cite{9-mariani2019compensation, 9R-16-herdovics2019compensation} have been proposed to reduce residuals between the baseline signal and the current signal. 
@@ -347,9 +348,7 @@ The uses of guided waves for temperature sensing purposes are limited. However, 
 The current implementations of acoustic temperature sensors demonstrate the potential of this method, but adapting these systems for use on turbine blades and NGVs will be challenging, starting with the method of effectively coupling to their structure. 
 
 \subsubsection{Measurement devices for the generation and acquisition of guided waves}\label{wavegen}
-The choice of transducer for the generation and acquisition of guided waves is limited by a number of factors including: elevated temperatures, space, and power consumption. 
-
-When transmitting a wave through the structure of a material transducers can either be operated in pulse-echo mode or in a pitch-catch configuration. Pulse-echo mode operates with a single transducer acting as both transmitter and receiver, where the signal reflected from features such as defects or boundaries are analysed. Pitch-catch configurations operate with multiple transducers, some acting as transmitters and some as receivers. Response times are faster in pitch-catch configurations as waves travel directly between transducers rather than requiring a reflection to operate. Systems designed to map defects or damage (tomography) operate in pitch-catch configurations, usually with multiple pairs of transmitters/receivers to allow for higher spatial accuracy. For rotating turbine blades a transducer could be implemented in a pulse-echo configuration, if a transducer could not be housed at the rotating tip of the blade. Transducers could be operated in a pitch-catch configuration on NGVs as transducers could be placed on either side of the static vane. 
+The choice of transducer for the generation and acquisition of guided waves is limited by a number of factors including: elevated temperatures, space, and power consumption. When transmitting a wave through the structure of a material transducers can either be operated in pulse-echo mode or in a pitch-catch configuration. Pulse-echo mode operates with a single transducer acting as both transmitter and receiver, where the signal reflected from features such as defects or boundaries are analysed. Pitch-catch configurations operate with multiple transducers, some acting as transmitters and some as receivers. Response times are faster in pitch-catch configurations as waves travel directly between transducers rather than requiring a reflection to operate. Systems designed to map defects or damage (tomography) operate in pitch-catch configurations, usually with multiple pairs of transmitters/receivers to allow for higher spatial accuracy. For rotating turbine blades a transducer could be implemented in a pulse-echo configuration, if a transducer could not be housed at the rotating tip of the blade. Transducers could be operated in a pitch-catch configuration on NGVs as transducers could be placed on either side of the static vane. 
 
 Piezoelectric based transducers are amongst the most common methods of generating and acquiring acoustic waves. They can be utilised in a number of different ways for either dedicated sensors or for transmitting a wave through a particular structure of interest. Many dedicated sensors are based on the use of interdigital transducers (IDTs) operated as either delay lines or resonators, and are often referred to as surface acoustic wave (SAW) devices. These sensors can be used for high temperature sensing and can be interrogated wirelessly~\cite{PereiraDaCunha2011,Dong2019}, however they would be difficult to implement on the structure of a turbine blade or NGV, while only providing a single point measurement. 
 
